[tool.poetry]
name = "promise"
version = "0.1.0"
description = ""
authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
codespell = "^2.2.1"
isort = "^5.10.1"
isbnlib = "^3.10.10"
flake8 = "^5.0.4"
more-itertools = "^8.14.0"
ipython = "^8.5.0"
debugpy = "^1.6.3"
black = "^22.8.0"
pytest = "^7.1.3"
requests-mock = "^1.10.0"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
exclude = ['tests/']
ignore_missing_imports = true
no_site_packages = true
pretty = true
scripts_are_modules = true
show_error_codes = true
show_error_context = true
strict = true
strict_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
